name:                marshallz
version:             0.1.0.0
synopsis:            A table that has no legs but has enough arms to party.
description:         New York, 1935. A mysterious sailboat is spotted and
                     everyone lies about its back-story.
homepage:            https://github.com/evturn/marshallz
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright (c) 2017 Evan Turner
category:            Very Cool
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Run
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , text

executable marshallz
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , marshallz
                     , turtle
                     , text

source-repository head
  type:                git
  location:            https://github.com/evturn/marshallz
